Login pages dark mode fix

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -34,6 +34,10 @@
     .modal-body{
         @apply relative p-4 w-full max-w-md max-h-full;
     }
+
+    .form-control{
+        @apply bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500
+    }
 }
 
 .header-right {
